[package]
name = "rakurai-example-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# QUIC dependencies
quinn = "0.11"
solana-tls-utils = { version = "3.1.4", features = ["agave-unstable-api"] }
solana-rpc-client = { version = "3.1.4", features = ["agave-unstable-api"] }
solana-system-interface = { version = "3.0.0", features = ["alloc", "bincode"] }
base64 = "0.22"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "rt", "macros"] }
tokio-util = { version = "0.7.17" }
clap = { version = "=4.5.55", features = ["derive"] }
solana-keypair = "3.1.0"
solana-pubkey = "4.0.0"
solana-tpu-client-next = { version = "3.1.8", features = ["agave-unstable-api"] }
solana-compute-budget-interface = "3.0.0"
solana-hash = "4.1.0"
solana-instruction = "3.1.0"
solana-transaction = "3.1.0"
bincode = "1.3.3"
thiserror = "2.0.18"